--- a/views/dca103welcomepage.ejs
+++ b/views/dca103welcomepage.ejs
@@ -35,21 +35,19 @@
             
             <hr class="text-muted">
             
-            <p class="fw-normal">DCA I Semester hnuaia subject pathumna <code>(a code hming DCA-103) </code>kan zir dawn a, 
+            <p class="fw-normal">DCA I Semester hnuaia subject pathumna (a code hming <code> DCA-103) </code>kan zir dawn a, 
             a subject hming chu  <code> Office Automation Software </code> a ni. 
             
-            He subject-ah hian Microsoft Word te, Excel te leh powerpoint te kan zir ang a, a <code>theory </code> in kan zir dawn a ni. 
-            Syllabus milin kan zir ang a, chapter tin hi video te, a thu te leh assignment te hmangin kan zir dawn a ni. </p>
+            He subject-ah hian <code>Microsoft Word</code> te,<code> Excel</code> te leh <code>powerpoint </code>  te kan zir ang a, subject khatah 
+            software chi hrang pathum kan zir dawn a. 
+            Syllabus milin kan zir dawn a ni. </p>
             
+            <p>
+              
+              He subject-ah hian hetiangin mark thendarh a ni. <b>Microsoft Word </b>- 15 marks, <b>Microsoft Excel </b>- 15 marks, <b>Microsoft Powerpoint </b>- 10 marks.
+              
+            </p>
 
-            <p class="fw-normal">Theory hian <code>mark 50</code> a pu a. Mark 50 chu 
-            Internal Assessment Mark 10 leh Theory exam mark 40 belhkhawm a ni a. Tuna kan zir tur hi theory exam
-            inbuatsaihna a ni leh ang. 
-            <em>Internal Assessment mark 10 ah hi chuan zirlai bik a awm lo va, institute-in zirlaite dinhmun a zir chianna atanga mark pek tur a ni.</em> </p>
-            
-            <hr class="mx-auto w-25">
-            
-            
            
             <h4 class="text-dark fw-normal mt-4 ">DCA-103 Chapter te</h4>
             
@@ -82,62 +80,123 @@
                             
                               <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
-                              <a href="dca103onlineclasschapter1"><button type="button" class="btn btn-link m-2">Chapter-1 <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter1"><button type="button" class="btn btn-link m-2">Chapter-1 (word) <i class="fas fa-angle-right"></i></button></a>
                               
                               </div>
                               
                               <div class=" col-lg-3 col-md-6 col-sm-6"> 
                               
-                              <a href="dca103onlineclasschapter2"><button type="button" class="btn btn-link m-2">Chapter-2 <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter2"><button type="button" class="btn btn-link m-2">Chapter-2 (word) <i class="fas fa-angle-right"></i></button></a>
                               
                               
                                 </div>
 
                                 <div class=" col-lg-3 col-md-6 col-sm-6"> 
 
-                                <a href="dca103onlineclasschapter3"><button type="button" class="btn btn-link m-2">Chapter-3 <i class="fas fa-angle-right"></i></button></a>
+                                <a href="dca103onlineclasschapter3"><button type="button" class="btn btn-link m-2">Chapter-3 (word) <i class="fas fa-angle-right"></i></button></a>
 
                                 </div>
                                 
                                 <div class=" col-lg-3 col-md-6 col-sm-6"> 
                                 
-                              <a href="dca103onlineclasschapter4"><button type="button" class="btn btn-link m-2">Chapter-4 <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter4"><button type="button" class="btn btn-link m-2">Chapter-4 (word) <i class="fas fa-angle-right"></i></button></a>
 
                             </div>
                             
                             <div class="col-lg-3 col-md-6 col-sm-6"> 
 
-                              <a href="dca103onlineclasschapter5"><button type="button" class="btn btn-link m-2">Chapter-5 <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter5"><button type="button" class="btn btn-link m-2">Chapter-5 (word) <i class="fas fa-angle-right"></i></button></a>
                               
                               </div>
                               
                               <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
-                              <a href="dca103onlineclasschapter6"><button type="button" class="btn btn-link m-2">Chapter-6 <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter6"><button type="button" class="btn btn-link m-2">Chapter-6 (word) <i class="fas fa-angle-right"></i></button></a>
                             
                             </div>
 
                             <div class="col-lg-3 col-md-6 col-sm-6">
                               
-                              <a href="dca103onlineclasschapter7"><button type="button" class="btn btn-link m-2">Chapter-7 <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter7"><button type="button" class="btn btn-link m-2">Chapter-7 (word) <i class="fas fa-angle-right"></i></button></a>
                               
                               </div>
                               
                               <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
-                              <a href="dca103onlineclasschapter8"><button type="button" class="btn btn-link m-2">Chapter-8 <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter8"><button type="button" class="btn btn-link m-2">Chapter-8 (word) <i class="fas fa-angle-right"></i></button></a>
                             
                             </div>
 
                             <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
-                              <a href="dca103onlineclasschapter9"><button type="button" class="btn btn-link m-2">Chapter-9 <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter9"><button type="button" class="btn btn-link m-2">Chapter-9 (word) <i class="fas fa-angle-right"></i></button></a>
                             
                             </div>
                             
                             <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                              <a href="dca103onlineclasschapter10"><button type="button" class="btn btn-link m-2">Chapter-10 <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter10"><button type="button" class="btn btn-link m-2">Chapter-10 (excel) <i class="fas fa-angle-right"></i></button></a>
+                                
+                                </div>
+                                
+                                
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            
+                              <a href="dca103onlineclasschapter11"><button type="button" class="btn btn-link m-2">Chapter-11 (excel) <i class="fas fa-angle-right"></i></button></a>
+                                
+                                </div>
+                                
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            
+                              <a href="dca103onlineclasschapter12"><button type="button" class="btn btn-link m-2">Chapter-12 (excel) <i class="fas fa-angle-right"></i></button></a>
+                                
+                                </div>
+                                
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            
+                              <a href="dca103onlineclasschapter13"><button type="button" class="btn btn-link m-2">Chapter-13 (excel) <i class="fas fa-angle-right"></i></button></a>
+                                
+                                </div>
+                                
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            
+                              <a href="dca103onlineclasschapter14"><button type="button" class="btn btn-link m-2">Chapter-14 (excel) <i class="fas fa-angle-right"></i></button></a>
+                                
+                                </div>
+                                
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            
+                              <a href="dca103onlineclasschapter15"><button type="button" class="btn btn-link m-2">Chapter-15 (excel) <i class="fas fa-angle-right"></i></button></a>
+                                
+                                </div>
+                                
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            
+                              <a href="dca103onlineclasschapter16"><button type="button" class="btn btn-link m-2">Chapter-16 (excel) <i class="fas fa-angle-right"></i></button></a>
+                                
+                                </div>
+                                
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            
+                              <a href="dca103onlineclasschapter17"><button type="button" class="btn btn-link m-2">Chapter-17 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
+                                
+                                </div>
+                                
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            
+                              <a href="dca103onlineclasschapter18"><button type="button" class="btn btn-link m-2">Chapter-18 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
+                                
+                                </div>
+                                
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            
+                              <a href="dca103onlineclasschapter19"><button type="button" class="btn btn-link m-2">Chapter-19 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
+                                
+                                </div>
+                                
+                                <div class="col-lg-3 col-md-6 col-sm-6"> 
+                            
+                              <a href="dca103onlineclasschapter20"><button type="button" class="btn btn-link m-2">Chapter-20 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
                                 
                                 </div>
 
