--- a/views/dca1semOnlineLessonChapter10.ejs
+++ b/views/dca1semOnlineLessonChapter10.ejs
@@ -83,33 +83,32 @@
             <hr>
             
             
-            <div class="accordion accordion-flush" id="accordionFlushExample">
-              
-              
-                <div class="accordion-item">  <!--syllabus video start-->
-                  
-                  <h2 class="accordion-header" id="flush-headingOne">
+            <div class="accordion" id="accordionPanelsStayOpenExample">
+  
+                    <div class="accordion-item"> <!--syllabus section started-->
                     
-                    <button class="accordion-button collapsed fs-5 text-primary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                       
-                      Syllabus
+                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                        
+                        Syllabus
+                      
+                      </button>
                     
-                    </button>
-                  
-                  </h2>
-                  
-                  <div id="flush-collapseOne" class="accordion-collapse collapse show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                    </h2>
                     
-                    <div class="accordion-body">
+                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                      
+                      
+                       <div class="accordion-body">
                       
                       
                       <p class="fw-light rounded">
                         
                         <em>
                           
-                         Lamtawi (Abbreviation) kan tih hi syllabus a awm lo a ni a. Amaherawhchu, computer zir dawn chuan a pawimawh si a,
-                         
-                         exam-ah a lo chhuak ve nual thin bawk a, chuvangin tun tumah hian a common zual nia kan hriat kan zir ho dawn a ni.
+                         Lamtawi (Abbreviation) kan tih hi chapter hranin a awm lo va, amaherawhchu, chapter-10 tiin kan han phuah belh a ni. 
+                         Tunah hian a common zual deuh deuh kan zir ho dawn a ni.
                           
              </em>  
                          
@@ -127,11 +126,11 @@
                 
                 
                 
-                <div class="accordion-item">
+                <div class="accordion-item"> <!--video section started-->
                   
-                  <h2 class="accordion-header" id="flush-headingTwo">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                     
-                    <button class="accordion-button collapsed fs-5 text-primary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
                       
                       Video
                    
@@ -139,8 +138,8 @@
                   
                   </h2>
                   
-                  <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                   
+                  <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+
                     <div class="accordion-body">
                       
                       
@@ -155,25 +154,29 @@
                 </div>
                 
                 
-                <!--definition-->
+                 <!--end of video section-->
                 
                 
                 
-                <div class="accordion-item">  <!--textbook start-->
+                <div class="accordion-item">  <!--textbook started-->
                   
-                  <h2 class="accordion-header" id="flush-headingThree">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                     
-                    <button class="accordion-button collapsed fs-5 text-primary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                          
+                          Text
+                        
+                        </button>
+                        
+                      </h2>
                       
-                      Text
-                    
-                    </button>
-                  
-                  </h2>
-                  
-                  <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                    
-                    <div class="accordion-body">
+                      <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                        
+                        
+                        <div class="accordion-body">
+                          
+                          
+                          
                       
        <p><em>ABBREVIATION</em></p>
        
@@ -321,29 +324,28 @@ Y2K - Year Two Thousand</p>
                   
                   </div>
                 
-                </div>  <!--Syllabus video end-->
+                </div>  <!--end of text definition-->
                 
-                
-                
-  
-                <!--end of definition-->
-                
+   
                 
                 <div class="accordion-item">
                  
-                  <h2 class="accordion-header" id="flush-headingFour">
-                   
-                    <button class="accordion-button collapsed fs-5 text-primary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingFour">
                     
-                      Assignment
-                   
-                    </button>
-                 
-                  </h2>
-                
-                  <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
-               
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
+                          
+                          Assignment
+                        
+                        </button>
+                        
+                      </h2>
+                      
+                      <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
+                        
                     <div class="accordion-body">
+                      
+                      
+                      <!--Assignment form started-->
                       
                      <form action="/computerStudents/theoryAssignment" method="POST" autocomplete="off">
               
