--- a/views/dca1semOnlineLessonChapter8.ejs
+++ b/views/dca1semOnlineLessonChapter8.ejs
@@ -83,24 +83,24 @@
             <hr>
             
             
-            <div class="accordion accordion-flush" id="accordionFlushExample">
-              
-              
-                <div class="accordion-item">  <!--syllabus video start-->
-                  
-                  <h2 class="accordion-header" id="flush-headingOne">
+            <div class="accordion" id="accordionPanelsStayOpenExample">
+  
+                    <div class="accordion-item"> <!--syllabus section started-->
                     
-                    <button class="accordion-button collapsed fs-5 text-primary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
                       
-                      Syllabus
+                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+                        
+                        Syllabus
+                      
+                      </button>
                     
-                    </button>
-                  
-                  </h2>
-                  
-                  <div id="flush-collapseOne" class="accordion-collapse collapse show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                    </h2>
                     
-                    <div class="accordion-body">
+                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+                      
+                      
+                       <div class="accordion-body">
                       
                       
                       <p class="fw-light rounded">
@@ -127,11 +127,11 @@ Supercomputers, Client and Server Computers, Handheld Computers (Tablet PC, PDA/
                 
                 
                 
-                <div class="accordion-item">
+                <div class="accordion-item"> <!--video section started-->
                   
-                  <h2 class="accordion-header" id="flush-headingTwo">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                     
-                    <button class="accordion-button collapsed fs-5 text-primary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
                       
                       Video
                    
@@ -139,8 +139,8 @@ Supercomputers, Client and Server Computers, Handheld Computers (Tablet PC, PDA/
                   
                   </h2>
                   
-                  <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                   
+                  <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+
                     <div class="accordion-body">
                       
                       
@@ -160,25 +160,28 @@ Supercomputers, Client and Server Computers, Handheld Computers (Tablet PC, PDA/
                 </div>
                 
                 
-                <!--definition-->
+                 <!--end of video section-->
                 
                 
                 
-                <div class="accordion-item">  <!--textbook start-->
+                <div class="accordion-item">  <!--textbook started-->
                   
-                  <h2 class="accordion-header" id="flush-headingThree">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingThree">
                     
-                    <button class="accordion-button collapsed fs-5 text-primary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+                          
+                          Text
+                        
+                        </button>
+                        
+                      </h2>
                       
-                      Text
-                    
-                    </button>
-                  
-                  </h2>
-                  
-                  <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                    
-                    <div class="accordion-body">
+                      <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+                        
+                        
+                        <div class="accordion-body">
+                          
+                          
                       
        <p><em>8) CLASSIFICATION OF COMPUTERS - (4 MARKS)</em></p>
        
@@ -230,29 +233,28 @@ kept on palm and operated. E.g., Tablet PC, PDA/Pocket PC, smartphone etc.</p>
                   
                   </div>
                 
-                </div>  <!--Syllabus video end-->
+                </div>  <!--end of text definition-->
                 
-                
-                
-  
-                <!--end of definition-->
-                
+   
                 
                 <div class="accordion-item">
                  
-                  <h2 class="accordion-header" id="flush-headingFour">
-                   
-                    <button class="accordion-button collapsed fs-5 text-primary" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                  <h2 class="accordion-header" id="panelsStayOpen-headingFour">
                     
-                      Assignment
-                   
-                    </button>
-                 
-                  </h2>
-                
-                  <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
-               
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour" aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
+                          
+                          Assignment
+                        
+                        </button>
+                        
+                      </h2>
+                      
+                      <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingFour">
+                        
                     <div class="accordion-body">
+                      
+                      
+                      <!--Assignment form started-->
                       
                       
                       
